# imdb-sentiment-classifier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.tmp  README.md  README_for_me.md  data_utils.py  docker-compose.yml  export_onnx.py  export_tensorrt.py  infer_cnn.py  prepare_imdb_kaggle.py  pyproject.toml  requirements.txt  train_cnn.py  triton_client.py
.dvc/: config
.dvc/tmp/: lock
artifacts/: .gitignore  textcnn.onnx.dvc  tokenizer.json.dvc
configs/: config.yaml
configs/data/: imdb.yaml
configs/mlflow/: default.yaml
configs/model/: textcnn.yaml
configs/paths/: default.yaml
configs/tokenizer/: bpe.yaml
configs/train/: default.yaml
data/: .gitignore  IMDb.dvc
imdb_sentiment_classifier/: __init__.py  bpe_tokenizer.py  cnn.py  data_utils.py  dataset.py
imdb_sentiment_classifier/scripts/: export_onnx.py  export_tensorrt.py  infer_cnn.py  prepare_imdb_kaggle.py  train_cnn.py  triton_client.py
model-repo/textcnn/: config.pbtxt
outputs/2025-12-24/16-41-30/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-24/16-49-00/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-24/16-49-13/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-24/16-49-21/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-24/17-07-01/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-12-24/17-09-44/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-24/17-12-01/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-12-24/17-13-32/.hydra/: hydra.yaml
outputs/2025-12-24/17-17-19/.hydra/: hydra.yaml  overrides.yaml
