[project]
name = "mlops-project"
version = "0.1.0"
description = "TextCNN sentiment classifier with BPE tokenizer (PyTorch + Lightning)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "mlflow>=2.10.0",
    "pytorch-lightning>=2.3.0",
    "hydra-core>=1.3.2",
    "dvc>=3.55.0",
    "datasets>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "CNN.py",
    "bpe_tokenizer.py",
    "dataset.py",
    "train_cnn.py",
    "infer_cnn.py",
    "export_onnx.py",
    "export_tensorrt.py",
    "triton_client.py",
    "README.md",
    "requirements.txt",
    "docker-compose.yml",
    "Dockerfile",
]
